[package]
name = "ruku"
version = "0.1.0"
authors = ["joker666 <mr.k779@outlook.com>"]
description = "A tiny PaaS. Ruku allows you to do git push deployments to your own servers."
edition = "2021"
license = "MIT"
homepage = "https://github.com/Joker666/ruku"
repository = "https://github.com/Joker666/ruku"

[dependencies]
bollard = "0.17.0"
clap = { version = "4.5.13", features = ["derive"] }
cmd_lib = "1.9.4"
colored = "2.1.0"
dotenvy = "0.15.7"
envy = "0.4.2"
home = "0.5.9"
nixpacks = "1.26.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
